--- a/index.html
+++ b/index.html
@@ -772,7 +772,74 @@
         <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/RoomsCharachterPage.png" alt="">
 
 
-        <div class="RoomsDivsSection">
+        <div class="RoomsDivsSection custom-scrollbarLobbyPage">
+
+
+
+
+            <div class="RoomBoxDiv">
+                <img class="LobbyImageTag" src="./imgs/LobbyMapImage.png" alt="">
+                <div class="CreatorRoomText">
+                    <p class="CreatorPtag">Creator</p>
+                    <div class="InSdDiv">
+                        <p class="UsenameCreatorP">Canx Player</p>
+                        <div class="PrivateDiv">
+                            <svg width="12" height="12" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.08333 6.41675V4.08341C4.08333 3.30987 4.39062 2.568 4.93761 2.02102C5.48459 1.47404 6.22645 1.16675 7 1.16675C7.77355 1.16675 8.51541 1.47404 9.06239 2.02102C9.60938 2.568 9.91667 3.30987 9.91667 4.08341V6.41675M2.91667 6.41675H11.0833C11.7277 6.41675 12.25 6.93908 12.25 7.58341V11.6667C12.25 12.3111 11.7277 12.8334 11.0833 12.8334H2.91667C2.27233 12.8334 1.75 12.3111 1.75 11.6667V7.58341C1.75 6.93908 2.27233 6.41675 2.91667 6.41675Z" stroke="#EC2D30" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                <p>private</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="BeTMoneyText">
+                    <p class="CreatorPtag">Bet money for entry</p>
+                    <p class="UsenameCreatorP">2000<span>$</span></p>
+                </div>
+
+                <div class="RoundsText">
+                    <p class="CreatorPtag">Rounds</p>
+                    <p class="UsenameCreatorP"><span>5</span> Rounds</p>
+                </div>
+
+                <div class="CurrentCreatorPtag">
+                    <p class="CreatorPtag">Current Rounds </p>
+                    <p class="UsenameCreatorP">3/5</p>
+                </div>
+
+                <div class="MapSelectPtag">
+                    <p class="CreatorPtag">Map</p>
+                    <p class="UsenameCreatorP">TownHall</p>
+                </div>
+
+                <div class="JoinLobbyButton" data-modal-target="#PrivatePasswordModal">
+                    <div class="RedButton">
+                        <div class="InsideRedButton">
+                            <div class="LineTopJoin"></div>
+                            <div class="RequestJoinLobby">
+                                <svg width="15" height="14" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.33333 9.16675V5.83341C6.33333 4.72835 6.77232 3.66854 7.55372 2.88714C8.33512 2.10573 9.39493 1.66675 10.5 1.66675C11.6051 1.66675 12.6649 2.10573 13.4463 2.88714C14.2277 3.66854 14.6667 4.72835 14.6667 5.83341V9.16675M4.66667 9.16675H16.3333C17.2538 9.16675 18 9.91294 18 10.8334V16.6667C18 17.5872 17.2538 18.3334 16.3333 18.3334H4.66667C3.74619 18.3334 3 17.5872 3 16.6667V10.8334C3 9.91294 3.74619 9.16675 4.66667 9.16675Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                <p>Request</p>
+                            </div>
+                            <div class="LineBottomJoin"></div>
+                        </div>
+                    </div>
+
+                    <div class="NormalButton">
+                        <div class="InsideNormalButton">
+                            <div class="LineTopJoinNormal"></div>
+                            <div class="RequestJoinLobby">
+                                <svg width="15" height="14" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.33333 9.16675V5.83341C6.33333 4.72835 6.77232 3.66854 7.55372 2.88714C8.33512 2.10573 9.39493 1.66675 10.5 1.66675C11.6051 1.66675 12.6649 2.10573 13.4463 2.88714C14.2277 3.66854 14.6667 4.72835 14.6667 5.83341V9.16675M4.66667 9.16675H16.3333C17.2538 9.16675 18 9.91294 18 10.8334V16.6667C18 17.5872 17.2538 18.3334 16.3333 18.3334H4.66667C3.74619 18.3334 3 17.5872 3 16.6667V10.8334C3 9.91294 3.74619 9.16675 4.66667 9.16675Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                <p>Request</p>
+                            </div>
+                            <div class="LineBottomJoinNormal"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="RoomBoxDiv">
                 <img class="LobbyImageTag" src="./imgs/LobbyMapImage.png" alt="">
