--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,18 @@
                  </div>
             </button>
         </div>
+
+        <div class="animate__fadeIn animate__animated anim6">
+            <div class="BottomVector ">
+                <img src="./imgs/BottomVector.svg" alt="">
+            </div>
+        </div>
+
+        <div class=" animate__fadeIn animate__animated anim6">
+            <div class="BottomVector2 ">
+                <img src="./imgs/BottomVector.svg" alt="">
+            </div>
+        </div>
       </div>
 
 
