--- a/index.html
+++ b/index.html
@@ -1144,6 +1144,12 @@
                 <img src="./imgs/BottomVector.svg" alt="">
             </div>
         </div>
+
+
+
+        <div class="InsideDetailsRoomLobby">
+
+        </div>
       </div>
 
 
