--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,14 @@
 
 
         <div class="InsideDetailsRoomLobby">
+            <div class="RightRoomDetail">
+                <div class="BottomOfmapRoomDetail">
+                    <div class="GreenBottomRoom">
 
+                    </div>
+                </div>
+
+            </div>
         </div>
       </div>
 
