Fixing this shit

--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,8 @@
             <div class="RightRoomDetail">
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
+                        <div class="GreenTopLine"></div>
+                        <div class="GreenBottomLine"></div>
 
                     </div>
                 </div>
