--- a/index.html
+++ b/index.html
@@ -1152,8 +1152,22 @@
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
                         <div class="GreenTopLine"></div>
+                        <div class="InsideGreenButton">
+                            <img src="./imgs/check.svg" alt="">
+                            <p id="StartGameText">Start The Game</p>
+                            <p id="SetReadyText">Set Ready</p>
+                        </div>
                         <div class="GreenBottomLine"></div>
+                    </div>
 
+                    <div class="GreenBottomRoom">
+                        <div class="GreenTopLine"></div>
+                        <div class="InsideGreenButton">
+                            <img src="./imgs/check.svg" alt="">
+                            <p id="StartGameText">Start The Game</p>
+                            <p id="SetReadyText">Set Ready</p>
+                        </div>
+                        <div class="GreenBottomLine"></div>
                     </div>
                 </div>
 
