--- a/index.html
+++ b/index.html
@@ -1160,14 +1160,14 @@
                         <div class="GreenBottomLine"></div>
                     </div>
 
-                    <div class="GreenBottomRoom">
-                        <div class="GreenTopLine"></div>
-                        <div class="InsideGreenButton">
+                    <div class="RedBottomRoom">
+                        <div class="RedTopLine"></div>
+                        <div class="InsideRedButton">
                             <img src="./imgs/check.svg" alt="">
                             <p id="StartGameText">Start The Game</p>
                             <p id="SetReadyText">Set Ready</p>
                         </div>
-                        <div class="GreenBottomLine"></div>
+                        <div class="RedBottomLine"></div>
                     </div>
                 </div>
 
