--- a/index.html
+++ b/index.html
@@ -1163,9 +1163,9 @@
                     <div class="RedBottomRoom">
                         <div class="RedTopLine"></div>
                         <div class="InsideRedButton">
-                            <img src="./imgs/check.svg" alt="">
-                            <p id="StartGameText">Start The Game</p>
-                            <p id="SetReadyText">Set Ready</p>
+                            <img src="./imgs/Close_Icon.svg" alt="">
+                            <p id="DisbandLobbyText">Disband Lobby</p>
+                            <p id="leaveTheRoomText">Leave The Room</p>
                         </div>
                         <div class="RedBottomLine"></div>
                     </div>
