--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,9 @@
 
         <div class="InsideDetailsRoomLobby">
             <div class="RightRoomDetail">
+                <div class="RightRoomDetailBg">
+
+                </div>
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
                         <div class="GreenTopLine"></div>
@@ -1159,7 +1162,6 @@
                         </div>
                         <div class="GreenBottomLine"></div>
                     </div>
-
                     <div class="RedBottomRoom">
                         <div class="RedTopLine"></div>
                         <div class="InsideRedButton">
@@ -1170,7 +1172,6 @@
                         <div class="RedBottomLine"></div>
                     </div>
                 </div>
-
             </div>
         </div>
       </div>
