--- a/index.html
+++ b/index.html
@@ -1150,6 +1150,10 @@
         <div class="InsideDetailsRoomLobby">
             <div class="RightRoomDetail">
                 <div class="RightRoomDetailBg">
+                    <div class="RoundsRoomDetail">
+                        <p>Rounds</p>
+                        <p>5 Rounds</p>
+                    </div>
                 </div>
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
