--- a/index.html
+++ b/index.html
@@ -1154,6 +1154,11 @@
                         <p>Rounds</p>
                         <p>5 Rounds</p>
                     </div>
+                    <div class="WhiteLineInsideRoomDetail"></div>
+                    <div class="GunsRoomDetail">
+                        <p>Gun</p>
+                        <p>Only Riffle</p>
+                    </div>
                 </div>
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
