--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,7 @@
                         <p>Gun</p>
                         <p>Only Riffle</p>
                     </div>
+                    <div class="WhiteLineInsideRoomDetail2"></div>
                 </div>
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
