Fixing this shit

--- a/index.html
+++ b/index.html
@@ -1160,6 +1160,10 @@
                         <p>Only Riffle</p>
                     </div>
                     <div class="WhiteLineInsideRoomDetail2"></div>
+                    <div class="MapRoomDetail">
+                        <p>Map</p>
+                        <p>Warre House</p>
+                    </div>
                 </div>
                 <div class="BottomOfmapRoomDetail">
                     <div class="GreenBottomRoom">
