--- a/index.html
+++ b/index.html
@@ -1150,6 +1150,7 @@
         <div class="InsideDetailsRoomLobby">
             <div class="RightRoomDetail">
                 <div class="RightRoomDetailBg">
+                    <img class="InsideRoomMapImage" src="./imgs/MapImage1.png" alt="">
                     <div class="RoundsRoomDetail">
                         <p>Rounds</p>
                         <p>5 Rounds</p>
