--- a/index.html
+++ b/index.html
@@ -1148,6 +1148,12 @@
 
 
         <div class="InsideDetailsRoomLobby">
+            <div class="LeftRoomDetail">
+                <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
+                    <p class="FirstP">Join Lobby pages</p>
+                    <p class="SecondP">Join Lobby pages</p>
+                </div>
+            </div>
             <div class="RightRoomDetail">
                 <div class="RightRoomDetailBg">
                     <img class="InsideRoomMapImage" src="./imgs/MapImage1.png" alt="">
@@ -1178,7 +1184,7 @@
                     </div>
                     <div class="RedBottomRoom">
                         <div class="RedTopLine"></div>
-                        <div class="InsideRedButton">
+                        <div class="InsideRedButtonRoom">
                             <img src="./imgs/Close_Icon.svg" alt="">
                             <p id="DisbandLobbyText">Disband Lobby</p>
                             <p id="leaveTheRoomText">Leave The Room</p>
