--- a/index.html
+++ b/index.html
@@ -1150,8 +1150,8 @@
         <div class="InsideDetailsRoomLobby">
             <div class="LeftRoomDetail">
                 <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
-                    <p class="FirstP">Join Lobby pages</p>
-                    <p class="SecondP">Join Lobby pages</p>
+                    <p class="FirstPRoom">Join Lobby pages</p>
+                    <p class="SecondPRoom">Join Lobby pages</p>
                 </div>
             </div>
             <div class="RightRoomDetail">
