--- a/index.html
+++ b/index.html
@@ -1149,9 +1149,12 @@
 
         <div class="InsideDetailsRoomLobby">
             <div class="LeftRoomDetail">
-                <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
-                    <p class="FirstPRoom">CANX ROOM LOBBYy</p>
-                    <p class="SecondPRoom">CANX ROOM LOBBYy</p>
+                <div>
+                    <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
+                        <p class="FirstPRoom">CANX ROOM LOBBYy</p>
+                        <p class="SecondPRoom">CANX ROOM LOBBYy</p>
+                    </div>
+                    <div></div>
                 </div>
             </div>
             <div class="RightRoomDetail">
