Edite lobby bullthist

--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
 
         <div class="InsideDetailsRoomLobby">
             <div class="LeftRoomDetail">
-                <div>
+                <div class="RoomNameLobbyDeatails">
                     <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
                         <p class="FirstPRoom">CANX ROOM LOBBYy</p>
                         <p class="SecondPRoom">CANX ROOM LOBBYy</p>
@@ -1162,7 +1162,7 @@
                                 </svg>
                           </div>
                         </div>
-                        <span>Send</span>
+                        <span>Edite Lobby</span>
                       </button>
                 </div>
             </div>
