--- a/index.html
+++ b/index.html
@@ -1149,21 +1149,24 @@
 
         <div class="InsideDetailsRoomLobby">
             <div class="LeftRoomDetail">
-                <div class="RoomNameLobbyDeatails">
-                    <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
-                        <p class="FirstPRoom">CANX ROOM LOBBYy</p>
-                        <p class="SecondPRoom">CANX ROOM LOBBYy</p>
-                    </div>
-                    <button class="EditeLobbyButton">
-                        <div class="svg-wrapper-1">
-                          <div class="svg-wrapper">
-                            <svg width="20" height="20" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8 13.3334H14M11 2.3334C11.2652 2.06819 11.6249 1.91919 12 1.91919C12.1857 1.91919 12.3696 1.95577 12.5412 2.02684C12.7128 2.09791 12.8687 2.20208 13 2.3334C13.1313 2.46472 13.2355 2.62063 13.3066 2.79221C13.3776 2.96379 13.4142 3.14769 13.4142 3.3334C13.4142 3.51912 13.3776 3.70302 13.3066 3.8746C13.2355 4.04618 13.1313 4.20208 13 4.3334L4.66667 12.6667L2 13.3334L2.66667 10.6667L11 2.3334Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                          </div>
+                <div>
+                    <div class="RoomNameLobbyDeatails">
+                        <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
+                            <p class="FirstPRoom">CANX ROOM LOBBYy</p>
+                            <p class="SecondPRoom">CANX ROOM LOBBYy</p>
                         </div>
-                        <span>Edite Lobby</span>
-                      </button>
+                        <button class="EditeLobbyButton">
+                            <div class="svg-wrapper-1">
+                              <div class="svg-wrapper">
+                                <svg width="17" height="17" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 13.3334H14M11 2.3334C11.2652 2.06819 11.6249 1.91919 12 1.91919C12.1857 1.91919 12.3696 1.95577 12.5412 2.02684C12.7128 2.09791 12.8687 2.20208 13 2.3334C13.1313 2.46472 13.2355 2.62063 13.3066 2.79221C13.3776 2.96379 13.4142 3.14769 13.4142 3.3334C13.4142 3.51912 13.3776 3.70302 13.3066 3.8746C13.2355 4.04618 13.1313 4.20208 13 4.3334L4.66667 12.6667L2 13.3334L2.66667 10.6667L11 2.3334Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                              </div>
+                            </div>
+                            <span>Edite Lobby</span>
+                          </button>
+                    </div>
+                    <p class="BetMoneyLobbyText">Bet money for winners <span>222000</span> $</p>
                 </div>
             </div>
             <div class="RightRoomDetail">
