--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,9 @@
                     </div>
                     <p class="BetMoneyLobbyText">Bet money for winners <span>222000</span> $</p>
                 </div>
+                <div class="BlueAndRedDivTeam">
+                    <div class="TeamDiv"></div>
+                </div>
             </div>
             <div class="RightRoomDetail">
                 <div class="RightRoomDetailBg">
