--- a/index.html
+++ b/index.html
@@ -1170,44 +1170,48 @@
                 </div>
                 <div class="BlueAndRedDivTeam">
                     <div class="TeamDiv"></div>
+                    <div class="TeamDiv"></div>
                 </div>
             </div>
-            <div class="RightRoomDetail">
-                <div class="RightRoomDetailBg">
-                    <img class="InsideRoomMapImage" src="./imgs/MapImage1.png" alt="">
-                    <div class="RoundsRoomDetail">
-                        <p>Rounds</p>
-                        <p>5 Rounds</p>
-                    </div>
-                    <div class="WhiteLineInsideRoomDetail"></div>
-                    <div class="GunsRoomDetail">
-                        <p>Gun</p>
-                        <p>Only Riffle</p>
-                    </div>
-                    <div class="WhiteLineInsideRoomDetail2"></div>
-                    <div class="MapRoomDetail">
-                        <p>Map</p>
-                        <p>Warre House</p>
-                    </div>
-                </div>
-                <div class="BottomOfmapRoomDetail">
-                    <div class="GreenBottomRoom">
-                        <div class="GreenTopLine"></div>
-                        <div class="InsideGreenButton">
-                            <img src="./imgs/check.svg" alt="">
-                            <p id="StartGameText">Start The Game</p>
-                            <p id="SetReadyText">Set Ready</p>
+
+            <div>
+                <div class="RightRoomDetail">
+                    <div class="RightRoomDetailBg">
+                        <img class="InsideRoomMapImage" src="./imgs/MapImage1.png" alt="">
+                        <div class="RoundsRoomDetail">
+                            <p>Rounds</p>
+                            <p>5 Rounds</p>
                         </div>
-                        <div class="GreenBottomLine"></div>
-                    </div>
-                    <div class="RedBottomRoom">
-                        <div class="RedTopLine"></div>
-                        <div class="InsideRedButtonRoom">
-                            <img src="./imgs/Close_Icon.svg" alt="">
-                            <p id="DisbandLobbyText">Disband Lobby</p>
-                            <p id="leaveTheRoomText">Leave The Room</p>
+                        <div class="WhiteLineInsideRoomDetail"></div>
+                        <div class="GunsRoomDetail">
+                            <p>Gun</p>
+                            <p>Only Riffle</p>
                         </div>
-                        <div class="RedBottomLine"></div>
+                        <div class="WhiteLineInsideRoomDetail2"></div>
+                        <div class="MapRoomDetail">
+                            <p>Map</p>
+                            <p>Warre House</p>
+                        </div>
+                    </div>
+                    <div class="BottomOfmapRoomDetail">
+                        <div class="GreenBottomRoom">
+                            <div class="GreenTopLine"></div>
+                            <div class="InsideGreenButton">
+                                <img src="./imgs/check.svg" alt="">
+                                <p id="StartGameText">Start The Game</p>
+                                <p id="SetReadyText">Set Ready</p>
+                            </div>
+                            <div class="GreenBottomLine"></div>
+                        </div>
+                        <div class="RedBottomRoom">
+                            <div class="RedTopLine"></div>
+                            <div class="InsideRedButtonRoom">
+                                <img src="./imgs/Close_Icon.svg" alt="">
+                                <p id="DisbandLobbyText">Disband Lobby</p>
+                                <p id="leaveTheRoomText">Leave The Room</p>
+                            </div>
+                            <div class="RedBottomLine"></div>
+                        </div>
                     </div>
                 </div>
             </div>
