--- a/index.html
+++ b/index.html
@@ -1169,8 +1169,13 @@
                     <p class="BetMoneyLobbyText">Bet money for winners <span>222000</span> $</p>
                 </div>
                 <div class="BlueAndRedDivTeam">
-                    <div class="TeamDiv"></div>
-                    <div class="TeamDiv"></div>
+                    <div class="TeamDiv">
+                        <div class="BlueShadowForTeam"></div>
+                    </div>
+                    <div class="TeamDiv">
+                        <div class="RedShadowForTeam"></div>
+                    </div>
+                    <!-- <img class="RedSvgBehindImg" src="./imgs/Group.png" alt=""> -->
                 </div>
             </div>
 
