--- a/index.html
+++ b/index.html
@@ -1169,11 +1169,12 @@
                     <p class="BetMoneyLobbyText">Bet money for winners <span>222000</span> $</p>
                 </div>
                 <div class="BlueAndRedDivTeam">
-                    <div class="TeamDiv">
+                    <div class="BlueTeamDiv">
+                        <div class="BlueShadowTopBox"></div>
                         <div class="BlueShadowForTeam"></div>
                     </div>
-                    <div class="TeamDiv">
-                        <div class="RedShadowForTeam"></div>
+                    <div class="BlueTeamDiv">
+                        <div class="BlueShadowForTeam"></div>
                     </div>
                     <!-- <img class="RedSvgBehindImg" src="./imgs/Group.png" alt=""> -->
                 </div>
