Fixing this shit again

--- a/index.html
+++ b/index.html
@@ -1173,8 +1173,9 @@
                         <div class="BlueShadowTopBox"></div>
                         <div class="BlueShadowForTeam"></div>
                     </div>
-                    <div class="BlueTeamDiv">
-                        <div class="BlueShadowForTeam"></div>
+                    <div class="RedTeamDiv">
+                        <div class="RedShadowTopBox"></div>
+                        <div class="RedShadowForTeam"></div>
                     </div>
                     <!-- <img class="RedSvgBehindImg" src="./imgs/Group.png" alt=""> -->
                 </div>
