--- a/index.html
+++ b/index.html
@@ -1169,8 +1169,17 @@
                     <p class="BetMoneyLobbyText">Bet money for winners <span>222000</span> $</p>
                 </div>
                 <div class="BlueAndRedDivTeam">
+                    <img class="VsImage" src="./imgs/VsImage.png" alt="">
                     <div class="BlueTeamDiv">
-                        <div class="BlueShadowTopBox"></div>
+                        <div class="BlueShadowTopBox">
+                            <div class="TopTeamsDiv">
+                                <div>
+                                    <h5>BLUE TEAM</h5>
+                                    <p>Strategic and coordinated players focusing on precision shots and defensive tactics. Ideal for methodical gameplay and teamwork.</p>
+                                </div>
+                                <div><p>Join Blue team</p></div>
+                            </div>
+                        </div>
                         <div class="BlueShadowForTeam"></div>
                     </div>
                     <div class="RedTeamDiv">
