--- a/index.html
+++ b/index.html
@@ -1172,20 +1172,21 @@
                     <img class="VsImage" src="./imgs/VsImage.png" alt="">
                     <div class="BlueTeamDiv">
                         <div class="BlueShadowTopBox">
-                            <div class="TopTeamsDiv">
-                                <div>
-                                    <h5>BLUE TEAM</h5>
-                                    <p>Strategic and coordinated players focusing on precision shots and defensive tactics. Ideal for methodical gameplay and teamwork.</p>
-                                </div>
-                                <div><p>Join Blue team</p></div>
-                            </div>
                         </div>
                         <div class="BlueShadowForTeam"></div>
+                        <div class="TopTeamsDiv">
+                            <div class="LeftDetailTeamTexts">
+                                <h3>BLUE TEAM</h3>
+                                <p>Strategic and coordinated players focusing on precision shots and defensive tactics. Ideal for methodical gameplay and teamwork.</p>
+                            </div>
+                            <div><p>Join Blue team</p></div>
+                        </div>
                     </div>
                     <div class="RedTeamDiv">
                         <div class="RedShadowTopBox"></div>
                         <div class="RedShadowForTeam"></div>
                     </div>
+                    
                     <!-- <img class="RedSvgBehindImg" src="./imgs/Group.png" alt=""> -->
                 </div>
             </div>
