Fixing some shits again

--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
                                 <h3>BLUE TEAM</h3>
                                 <p>Strategic and coordinated players focusing on precision shots and defensive tactics. Ideal for methodical gameplay and teamwork.</p>
                             </div>
-                            <div><p>Join Blue team</p></div>
+                            <div class="JoinTeamButton"><p>Join Blue team</p></div>
                         </div>
                     </div>
                     <div class="RedTeamDiv">
