--- a/index.html
+++ b/index.html
@@ -1181,10 +1181,25 @@
                             </div>
                             <div class="JoinTeamButton"><p>Join Blue team</p></div>
                         </div>
+
+                        <div class="PlayersBoxesRoom">
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                        </div>
                     </div>
                     <div class="RedTeamDiv">
                         <div class="RedShadowTopBox"></div>
                         <div class="RedShadowForTeam"></div>
+                        <div class="TopTeamsDiv">
+                            <div class="LeftDetailTeamTexts">
+                                <h3 class="RedTeamTextH3">RED TEAM</h3>
+                                <p>Strategic and coordinated players focusing on precision shots and defensive tactics. Ideal for methodical gameplay and teamwork.</p>
+                            </div>
+                            <div class="JoinTeamButton"><p>Join Blue team</p></div>
+                        </div>
                     </div>
                     
                     <!-- <img class="RedSvgBehindImg" src="./imgs/Group.png" alt=""> -->
