--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,10 @@
                         </div>
 
                         <div class="PlayersBoxesRoom">
-                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom">
+                                <div class="RedLineBottomBoxPLayer"></div>
+                                <div class="ReadyLineBottomBoxPLayer"></div>
+                            </div>
                             <div class="PlayerBoxRoom"></div>
                             <div class="PlayerBoxRoom"></div>
                             <div class="PlayerBoxRoom"></div>
@@ -1199,6 +1202,13 @@
                                 <p>Strategic and coordinated players focusing on precision shots and defensive tactics. Ideal for methodical gameplay and teamwork.</p>
                             </div>
                             <div class="JoinTeamButton"><p>Join Blue team</p></div>
+                        </div>
+                        <div class="PlayersBoxesRoom">
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
+                            <div class="PlayerBoxRoom"></div>
                         </div>
                     </div>
                     
