--- a/index.html
+++ b/index.html
@@ -1184,6 +1184,10 @@
 
                         <div class="PlayersBoxesRoom">
                             <div class="PlayerBoxRoom">
+                                <div class="IdAndKdDiv">
+                                    <p>ID: <span>24</span></p>
+                                    <p>KDL <span>1.9</span></p>
+                                </div>
                                 <div class="RedLineBottomBoxPLayer"></div>
                                 <div class="ReadyLineBottomBoxPLayer"></div>
                             </div>
