--- a/index.html
+++ b/index.html
@@ -1184,6 +1184,10 @@
 
                         <div class="PlayersBoxesRoom">
                             <div class="PlayerBoxRoom">
+                                <div class="UserNameSteamDiv">
+                                    <img src="./imgs/Crown.svg" alt="">
+                                    <p>CanX Player</p>
+                                </div>
                                 <div class="IdAndKdDiv">
                                     <p>ID: <span>24</span></p>
                                     <p>KDL <span>1.9</span></p>
