--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
                             <div class="PlayerBoxRoom">
                                 <div class="UserNameSteamDiv">
                                     <img src="./imgs/Crown.svg" alt="">
-                                    <p>CanX Player</p>
+                                    <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
                                 </div>
                                 <div class="IdAndKdDiv">
                                     <p>ID: <span>24</span></p>
