Fixing some shit

--- a/index.html
+++ b/index.html
@@ -1184,8 +1184,16 @@
 
                         <div class="PlayersBoxesRoom">
                             <div class="PlayerBoxRoom">
+                                <div class="SteamProfileAllDiv">
+                                    <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
+                                    <div class="center-containerRoomPlayer">
+                                        <div class="diamond-wrapperRoomPlayer">
+                                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="UserNameSteamDiv">
-                                    <img src="./imgs/Crown.svg" alt="">
+                                    <img class="" src="./imgs/Crown.svg" alt="">
                                     <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
                                 </div>
                                 <div class="IdAndKdDiv">
