--- a/index.html
+++ b/index.html
@@ -1200,8 +1200,14 @@
                                     <p>ID: <span>24</span></p>
                                     <p>KDL <span>1.9</span></p>
                                 </div>
-                                <div class="RedLineBottomBoxPLayer"></div>
+                                <div class="BlueLineBottomBoxPLayer"></div>
                                 <div class="ReadyLineBottomBoxPLayer"></div>
+                                <div class="OwnerShipHoevrDiv">
+                                    <div class="kickSetOwnerDiv">
+                                        <p>Kick</p>
+                                        <p>Setowner</p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="PlayerBoxRoom"></div>
                             <div class="PlayerBoxRoom"></div>
